manifests/mongo-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-access
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mongo-express
      ports:
        - protocol: TCP
          port: 27017
  policyTypes:
    - Ingress
